--- a/kidsnote/package.json
+++ b/kidsnote/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.7",
     "html-webpack-plugin": "^5.5.4",
+    "react-app-rewired": "^2.2.1",
     "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
